--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "eslint": "^8.50.0",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.0.3",
     "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   },
