--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.14",
+    "@react-navigation/stack": "^6.3.18",
     "@types/react-native-vector-icons": "^6.4.15",
+    "axios": "^1.5.1",
     "expo": "~49.0.13",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-native": "0.72.5",
+    "react-native-gesture-handler": "2.12.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "3.22.0",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
