--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "2.12.0",
+    "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "3.22.0",
     "react-native-vector-icons": "^10.0.0"
