feat: 登录界面以及表单校验

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "strict": true,
     "paths": {
       "@/*": ["./src/*"]
-    }
-  }
+    },
+    "strictPropertyInitialization": false,
+    "experimentalDecorators": true,
+  },
 }
