--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.18",
     "@types/react-native-vector-icons": "^6.4.15",
     "axios": "^1.5.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "expo": "~49.0.13",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.4.0",
