--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "3.22.0",
+    "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
