--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo": "~49.0.13",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.4.0",
+    "expo-image-picker": "^14.5.0",
     "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
@@ -43,7 +44,8 @@
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "redux-persist-expo-securestore": "^2.0.0"
+    "redux-persist-expo-securestore": "^2.0.0",
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
