--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-image-picker": "^14.5.0",
     "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
+    "hox": "^2.1.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
