--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
     "hox": "^2.1.1",
+    "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
