feat: 添加评论展开收起功能

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-gesture-handler": "2.12.0",
     "react-native-pager-view": "^6.2.1",
     "react-native-paper": "^5.10.6",
+    "react-native-read-more-text": "^1.1.2",
     "react-native-reanimated": "3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "3.22.0",
@@ -54,6 +55,7 @@
     "@babel/core": "^7.20.0",
     "@tanstack/eslint-plugin-query": "^4.36.1",
     "@types/react": "~18.2.14",
+    "@types/react-native-read-more-text": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^8.50.0",
