--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^4.36.1",
     "@types/react-native-vector-icons": "^6.4.15",
+    "ahooks": "^3.7.8",
     "axios": "^1.5.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -30,6 +31,7 @@
     "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
     "hox": "^2.1.1",
+    "lottie-react-native": "^6.3.1",
     "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
