--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "date-fns": "^2.30.0",
     "expo": "~49.0.13",
     "expo-app-loading": "^2.1.1",
+    "expo-file-system": "^15.6.0",
     "expo-font": "~11.4.0",
     "expo-image-picker": "^14.5.0",
+    "expo-media-library": "^15.6.0",
     "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
     "hox": "^2.1.1",
@@ -38,6 +40,7 @@
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "2.12.0",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-pager-view": "^6.2.1",
     "react-native-paper": "^5.10.6",
     "react-native-read-more-text": "^1.1.2",
