--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "3.22.0",
     "react-native-svg": "^13.14.0",
+    "react-native-svg-transformer": "^1.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.1.6",
     "react-native-vector-icons": "^10.0.0",
