--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-top-tabs": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
@@ -27,29 +27,29 @@
     "date-fns": "^2.30.0",
     "expo": "~49.0.13",
     "expo-app-loading": "^2.1.1",
-    "expo-file-system": "^15.6.0",
+    "expo-file-system": "~15.4.4",
     "expo-font": "~11.4.0",
-    "expo-image-picker": "^14.5.0",
-    "expo-media-library": "^15.6.0",
-    "expo-secure-store": "^12.5.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-media-library": "~15.4.1",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
     "hox": "^2.1.1",
-    "lottie-react-native": "^6.3.1",
+    "lottie-react-native": "5.1.6",
     "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "2.12.0",
     "react-native-image-zoom-viewer": "^3.0.1",
-    "react-native-pager-view": "^6.2.1",
+    "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.10.6",
     "react-native-read-more-text": "^1.1.2",
     "react-native-reanimated": "3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "3.22.0",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.1.6",
