--- a/eas.json
+++ b/eas.json
@@ -1,23 +1,21 @@
 {
-  "cli": {
-    "version": ">= 5.9.0"
-  },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal",
-      "channel": "development"
-    },
-    "preview": {
+    "prod": {
       "android": {
-        "buildType": "apk"
-      }
+        "buildType": "apk",
+        "image": "latest"
+      },
+      "channel": "prod"
     },
-    "production": {
-      "channel": "production"
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      },
+      "channel": "preview2"
+    },
+    "preview3": {
+      "developmentClient": true,
+      "channel": "preview3"
     }
-  },
-  "submit": {
-    "production": {}
   }
 }
