--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "postinstall": "npx patch-package"
+    "postinstall": "npx patch-package",
+    "build:android": "eas build -p android --profile prod"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
