--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "postinstall": "npx patch-package",
-    "build:android": "eas build -p android --profile prod"
+    "build:android": "eas build -p android --profile prod",
+    "update:android": "eas update --channel prod --message \"update\""
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -28,11 +29,14 @@
     "date-fns": "^2.30.0",
     "expo": "~49.0.13",
     "expo-app-loading": "^2.1.1",
+    "expo-build-properties": "~0.8.3",
+    "expo-dev-client": "~2.4.12",
     "expo-file-system": "~15.4.4",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-media-library": "~15.4.1",
     "expo-secure-store": "~12.3.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
     "hox": "^2.1.1",
@@ -59,8 +63,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-persist-expo-securestore": "^2.0.0",
-    "use-immer": "^0.9.0",
-    "expo-splash-screen": "~0.20.5"
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
